--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       /* pointer-events: none;  必要に応じて */
     }
   </style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <svg
@@ -101,6 +102,7 @@
   <line id="line-ie" x1="430.8889465332031" y1="157.7569580078125" x2="477.2945861816406" y2="100.9884147644043"></line>
   <line id="line-er2" x1="505.2945861816406" y1="127.9884147644043" x2="535.6500854492188" y2="92.50695037841797"></line>
   </svg>
+  	<script src="script.js"></script>
 </body>
 
 
